fixed QR code readability issue by adjusting size of image

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,8 +100,10 @@ body {
   border-radius: 20px;
   box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1);
 }
+
+/* don't go to big. otherwise the qr code is may not readable anymore */
 #outputbox img {
-  width: 300px;
+  width: 36%;
   position: absolute;
   top: 50%;
   left: 50%;
